<resources>
    <string name="app_name">Six Jars</string>
    <string name="overview">Overview</string>
    <string name="wallet">Wallet</string>
    <string name="money_management">Money management</string>
    <string name="estimate">Estimate</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="revenue">REVENUE</string>
    <string name="expenditure">EXPENDITURE</string>
    <string name="revenue_type">Revenue type</string>
    <string name="expenditure_type">Expenditure type</string>
    <string name="catalog">Catalog</string>
    <string name="language">Language</string>
    <string name="jar_config">Configuration</string>
    <string name="statistical">Statistical</string>
    <string name="save">Save</string>
    <string name="english" translatable="false">English</string>
    <string name="tieng_viet" translatable="false">Tiếng Việt</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="required_field">Required field</string>
    <string name="item_deleted">Item has been removed</string>
    <string name="item_added">Item has been added</string>
    <string name="deletion">Are you sure to delete ?</string>
    <string name="type">Type</string>
    <string name="description">Description</string>
    <string name="update_successful">Update successful</string>
    <string name="total">Total</string>
    <string name="year">year(s)</string>
    <string name="my_money">My money for the next</string>
    <string name="detail">Detail</string>
    <string name="date_format">EEE, dd-MMM-yyyy</string>
    <string name="time_format" translatable="false">HH:mm</string>
    <string name="month_format" translatable="false">MMMM, yyyy</string>
    <string name="jar">Jar</string>
    <string name="my_expenditure">My Expenditure</string>
    <string name="my_income">My income</string>
    <string name="to">to</string>
</resources>
